--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-torch==1.10.0
+torch==1.12.1+cu116
+--find-links https://download.pytorch.org/whl/torch_stable.html
 scipy==1.8.0
 scikit-image==0.19.1
 scikit-learn==1.0.2
