--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ checkpoint/HAM*
 checkpoint/cifar*
 data/*
 CIFAR-10-C/*
+CIFAR-100-C/*
 cifar10results/*
+cifar100results/*
+skinresults/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
